--- a/Mini_projeto_Data_science_Hashtag.ipynb
+++ b/Mini_projeto_Data_science_Hashtag.ipynb
@@ -6,7 +6,7 @@
       "name": "Mini projeto Data science - Hashtag.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO+qVqedy2n+oScgt8docaO",
+      "authorship_tag": "ABX9TyNkDnQHJQRlflIrtzUA5uJR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/micvet/intensivo-python-hash/blob/main/Mini_projeto_Data_science_Hashtag.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/micvet/mini-projeto-data-science-ia/blob/main/Mini_projeto_Data_science_Hashtag.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -744,6 +744,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Previsões de vendas para TV: 7.289; Radio: 7.954; Jornal: 20.582."
+      ],
+      "metadata": {
+        "id": "hwOjmbNVNszS"
+      }
     }
   ]
 }
